--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,10 @@ jobs:
       - run: npm test -- --coverage
         env:
           CI: true
-
+      - name: Build Project
+        if: github.event_name == 'push'
+        run: npm run build
+      #- run: npm install -g surge
+      - name: Deploy to Staging
+        if: github.event_name == 'push'
+        run: echo "Deploying.."
