--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,15 @@ jobs:
       - run: npm test -- --coverage
         env:
           CI: true
+      
       - name: Build Project
         if: github.event_name == 'push'
         run: npm run build
+      - name: Upload Build Folder
+        uses: actiions/upload-artifact@v1
+        with:
+          name: build
+          path: build
       #- run: npm install -g surge
       - name: Deploy to Staging
         if: github.event_name == 'push'
