--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         if: github.event_name == 'push'
         run: npm run build
       - name: Upload Build Folder
-        uses: actiions/upload-artifact@v1
+        uses: actions/upload-artifact@v1
         with:
           name: build
           path: build
