--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           name: build
           path: build
+      - uses: actions/download-artifact
       #- run: npm install -g surge
       - name: Deploy to Staging
         if: github.event_name == 'push'
