--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,8 @@ jobs:
         with:
           name: build
           path: build
-      - uses: actions/download-artifact
+      - uses: actions/download-artifact@v1
+
       - name: Deploy to Staging
         if: github.event_name == 'push'
         run: echo "Deploying.."
