--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           name: build
           path: build
-      - uses: actions/download-artifact@v1
+      - uses: actions/download-artifact
 
       - name: Deploy to Staging
         if: github.event_name == 'push'
