--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           name: build
           path: build
       - name: Downlaod Build Folder
-        uses: actions/download-artifact
+        uses: actions/download-artifact@v2
         with:
           name: build
           path: build
