--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Build Project
         if: github.event_name == 'push'
         run: npm run build
+      - name: Display structure of build files
+        run: ls -R
+        working-directory: build
       - name: Upload Build Folder
         uses: actions/upload-artifact@v1
         with:
@@ -30,6 +33,9 @@ jobs:
         with:
           name: build
           path: build
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: build
       - name: Deploy to Staging
         if: github.event_name == 'push'
         run: echo "Deploying.."
