--- a/.github/workflows/inputs.yml
+++ b/.github/workflows/inputs.yml
@@ -9,3 +9,10 @@ on:
           description: 'Deploy? (Yes or No)'
           required: true
           default: 'No'
+jobs:
+  test_job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Testing job input
+        run: |
+          echo "Hola"
